--- a/assets/scss/devresume.scss
+++ b/assets/scss/devresume.scss
@@ -137,6 +137,10 @@ a.resume-link {
 	max-width: 120px;
 }
 
+.resume-tree-image {
+	max-width: 640px;
+}
+
 .resume-intro {
 	font-size: 0.875rem;
 }
